# aoc_rs

./: Cargo.toml  README.md  justfile  wat.py
src/: day_generator.rs  main.rs
src/commands/: bench.rs  mod.rs  run.rs
src/events/: mod.rs
src/events/year_2018/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs
src/events/year_2019/: day_02.rs  day_05.rs  day_07.rs  day_09.rs  mod.rs
src/events/year_2023/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs
src/events/year_2024/: day_01.rs  day_03.rs  day_05.rs  day_07.rs  day_09.rs  day_11.rs  day_13.rs  day_15.rs  day_17.rs  day_19.rs  day_21.rs  day_23.rs  day_25.rs  mod.rs
src/events/year_2025/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs
src/tasks/: mod.rs
src/tasks/year_2023/: day_01.rs
src/templates/: day_template.txt  mod_err_template.txt  mod_template.txt
src/utils/: aoc_result.rs  grid.rs  math_utils.rs  mod.rs  point.rs  slice_utils.rs  variable.rs  vec2d.rs
src/vm/: memory.rs  mod.rs
