[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
cookie = "0.18.0"
fancy-regex = "0.12.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking", "cookies", "cookie_crate"] }
time = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
