[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
cookie = "0.18.1"
fancy-regex = "0.14.0"
html-escape = "0.2.13"
itertools = "0.13.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "cookies"] }
time = "0.3.36"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
