[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
cookie = "0.18.1"
derive_more = { version = "2.1.0", features = ["display"] }
fancy-regex = "0.16.2"
html-escape = "0.2.13"
itertools = "0.14.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "cookies"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
